<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="boys.bachmair.pickupgame.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginButton"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/signupButton"
        android:ems="10"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="48sp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        tools:text="@string/title" />

    <Button
        android:id="@+id/loginButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_above="@+id/signupButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="56dp"
        android:background="@color/colorAccent"
        android:onClick="loginScreen"
        android:text="@string/login"
        android:textSize="20sp"
        tools:text="@string/login" />

    <Button
        android:id="@+id/signupButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="82dp"
        android:background="@color/colorPrimary"
        android:onClick="signupScreen"
        android:text="@string/signup"
        android:textSize="20sp"
        tools:text="@string/signup" />
</RelativeLayout>
